2007-02-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/multiequal.spice-sdb: Updated golden file to be current.

	* tests/Makefile.am, tests/drc2/Makefile.am,
	tests/hierarchy/Makefile.am: Temporarily disabled make check to
	get past make distcheck.  The rules in make tests are probably
	missing a variable specifying the source of the input files.
	make check should enabled once we figure out what is missing.

	* tests/amp.spice-sdb, tests/darlington.spice-sdb: Updated golden	
	files to be current.

2007-02-11 (later) Stuart Brorson   <sdb@cloud9.net>
	* scheme/gnet-spice-sdb.scm, scheme/gnetlist.scm: Changed 
	string-pad-right to safe-string-head per suggestion from Jeff
	Mallatt.  Added safe-string-head to gnetlist.scm.
	
2007-02-11 Stuart Brorson   <sdb@cloud9.net>
	* scheme/gnet-spice-sdb.scm: Incorporated patch from Jeff Mallatt
	enabling SPICE netlisting of slotted parts.
	
2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/gnetlist.1, src/gnetlist.c, src/parsecmd.c: Applied patch by
	Tomaz Solc [ 1593644 ] gnetlist: use "-g help" to list available
	backends. Thanks!

	* tests/.cvsignore: Added rule to ignore all the newly generated 
	files.

	* scheme/gnet-bom.scm, scheme/gnet-bom2.scm: Applied patch to
	change "package" to "refdes" [ 1656822 ] BOM/BOM2 should use
	refdes in title line

	* tests/hierarchy/hierarchy.geda: Updated golden file due to ordering
	of output changing. 

	* src/globals.c: Removed quit_func since it is completely unused.

	* docs/gnetlist.1: Updated the man page a little for bug:
	[ 1556064 ] man page version out of date

	* tests/*.spice-sdb: Updated golden files to be current due to 
	version number update.
	
	* configure.ac: Bumped package version to 20070216.

2007-02-10 Carlos Nieves Onega <cnieves@iespana.es>

	* tests/Makefile.am, tests/drc2/Makefile.am, 
	  tests/hierarchy/Makefile.am:
	  When running "make check", run "make tests" too.

        * tests/drc2/Makefile.am:
	  Added a pass/failed line after each test.
