@@ -34,6 +34,39 @@
 
 (define allegro:write-device
    (lambda (device package)
+
+      ;; Check if the 'devfiles' directory exist.
+      (if (not (access? "devfiles" F_OK))
+	  (if (access? "." W_OK) 
+	      ;; If the 'devfiles' directory doesn't exist, and 
+	      ;; we have write access to the current directory, then create it.
+	      (mkdir "devfiles")
+	      ;; If we don't have write access to the current directory,
+	      ;; end with an error message.
+	      (begin
+		(error (string-append
+			"the device files are expected to be in the 'devfiles' directory.\n"
+			"       However, can't create it!.\n"
+			"       Check write permissions of the current directory.\n"))))
+	  ;; If 'devfiles' exist, check if it is a directory.
+	  (if (not (eq? (stat:type (stat "devfiles")) 'directory))
+	      (begin
+		;; 'devfiles' exists, but it is not a directory.
+		;; End with an error message.
+		(error (string-append 
+			"the device files are expected to be in the 'devfiles' directory.\n"
+			"       However, 'devfiles' exists and it is not a directory!.\n"))
+		)))
+      ;; 'devfiles' should exist now. Check if we have write access.
+      (if (not (access? "devfiles" W_OK))
+	  ;; We don't have write access to 'devfiles'. 
+	  ;; End with an error message
+	  (error (string-append
+		  "the device files are expected to be in the 'devfiles' directory.\n"
+		  "       However, can't access it for writing!.\n"
+		  "       Check write permissions of the 'devfiles' directory.\n")))
+   
+
       (let ((p (open-output-file (string-downcase! (string-append "devfiles/" (string-append device ".txt"))))))
          (display "(Device File generated by gEDA Allegro Netlister)\n" p)
          (display "PACKAGE " p)
